<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <name>platform</name>
  <groupId>com.gxy</groupId>
  <artifactId>platform</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.0</version>
    <relativePath/>
  </parent>

  <repositories>
    <repository>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <url>https://repo.spring.io/milestone</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>spring-snapshots</id>
      <name>Spring Snapshots</name>
      <url>https://repo.spring.io/snapshot</url>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>
  </repositories>

  <modules>
<!--    中间件-->
    <module>middleware</module>
 <!--    web模块-->
<!--    <module>core</module>-->
<!--    代码生产模块-->
    <module>generator</module>
    <module>web</module>

  </modules>

  <properties>
    <!-- 项目配置 -->
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- orm -->
    <druid-spring-boot.version>1.2.22</druid-spring-boot.version>
    <mybatis-flex.version>1.9.4</mybatis-flex.version>
    <flex-codegen.version>1.8.3</flex-codegen.version>
    <postgresql.version>42.7.3</postgresql.version>
    <mysql.version>8.3.0</mysql.version>
    <postgresql.version>42.7.3</postgresql.version>
    <HikariCP.version>5.0.1</HikariCP.version>
    <!-- JWT -->
    <jwt.version>4.4.0</jwt.version>

    <!-- tools -->
    <httpclient.version>4.5.14</httpclient.version>
    <hutool.version>5.8.25</hutool.version>
    <fastjson.version>2.0.0</fastjson.version>
    <easyexcel.version>3.3.4</easyexcel.version>
    <lombok.version>1.18.30</lombok.version>
    <httpclient.version>4.5.14</httpclient.version>
    <commons-io.version>2.16.1</commons-io.version>
    <!--中间件-->
    <rabbitmq.version>3.3.0</rabbitmq.version>
    <spring-boot.version>3.3.0</spring-boot.version>
    <elasticsearch.version>8.11.1</elasticsearch.version>
    <dashscope.version>2.16.2</dashscope.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!--spring 相关-->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-web</artifactId>
        <version>${spring-boot.version}</version>
      </dependency>

      <!--spring AI-->
      <dependency>
        <groupId>org.springframework.ai</groupId>
        <artifactId>spring-ai-bom</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!--数据库相关开始-->
      <dependency>
        <groupId>com.mysql</groupId>
        <artifactId>mysql-connector-j</artifactId>
        <version>${mysql.version}</version>
      </dependency>
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.version}</version>
      </dependency>
      <dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>druid-spring-boot-3-starter</artifactId>
        <version>${druid-spring-boot.version}</version>
      </dependency>
      <dependency>
        <groupId>com.mybatis-flex</groupId>
        <artifactId>mybatis-flex-spring-boot3-starter</artifactId>
        <version>${mybatis-flex.version}</version>
      </dependency>
      <dependency>
        <groupId>com.mybatis-flex</groupId>
        <artifactId>mybatis-flex-processor</artifactId>
        <version>${mybatis-flex.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>com.zaxxer</groupId>
        <artifactId>HikariCP</artifactId>
        <version>${HikariCP.version}</version>
      </dependency>
      <!--数据库相关结束-->
      <!--代码生成相关开始-->
      <dependency>
        <groupId>com.mybatis-flex</groupId>
        <artifactId>mybatis-flex-codegen</artifactId>
        <version>${flex-codegen.version}</version>
      </dependency>
      <!--代码生成结束-->

<!--      <dependency>-->
<!--        <groupId>com.github.xiaoymin</groupId>-->
<!--        <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>-->
<!--        <version>4.1.0</version>-->
<!--      </dependency>-->
      <dependency>
        <groupId>com.auth0</groupId>
        <artifactId>java-jwt</artifactId>
        <version>${jwt.version}</version>
      </dependency>

      <!--工具依赖-->
      <dependency>
        <groupId>cn.hutool</groupId>
        <artifactId>hutool-all</artifactId>
        <version>${hutool.version}</version>
      </dependency>
      <dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>fastjson</artifactId>
        <version>${fastjson.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-amqp</artifactId>
        <version>${rabbitmq.version}</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <!-- PDF解析依赖 -->
      <dependency>
        <groupId>org.apache.pdfbox</groupId>
        <artifactId>pdfbox</artifactId>
        <version>2.0.28</version>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpclient</artifactId>
        <version>${httpclient.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpmime</artifactId>
        <version>${httpclient.version}</version>
      </dependency>
      <dependency>
        <groupId>co.elastic.clients</groupId>
        <artifactId>elasticsearch-java</artifactId>
        <version>${elasticsearch.version}</version>
      </dependency>
      <!-- Apache Commons IO (用于文件处理) -->
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
<!--      阿里大数据AI-->
      <!-- https://mvnrepository.com/artifact/com.alibaba/dashscope-sdk-java -->
      <dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>dashscope-sdk-java</artifactId>
        <version>${dashscope.version}</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

</project>
